--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
   },
   "devDependencies": {
     "@types/node": "^20.4.2",
+    "arweave": "^1.14.0",
     "prettier": "^3.0.0",
     "typescript": "^5.1.6",
     "vite": "^4.4.3",
     "vite-plugin-dts": "^3.2.0"
+  },
+  "dependencies": {
+    "@arweave-wallet-kit/core": "^0.0.1-beta.1"
   }
 }
