--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["src"],
+  "include": ["src", "node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
