--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     }
   },
   "devDependencies": {
+    "@arweave-wallet-kit/core": "^0.0.1-beta.1",
     "@types/node": "^20.4.2",
     "arweave": "^1.14.0",
     "prettier": "^3.0.0",
@@ -36,7 +37,7 @@
     "vite": "^4.4.3",
     "vite-plugin-dts": "^3.2.0"
   },
-  "dependencies": {
-    "@arweave-wallet-kit/core": "^0.0.1-beta.1"
+  "peerDependencies": {
+    "@arweave-wallet-kit/core": ">= 0.0.1-beta.1 < 2"
   }
 }
